# Sidewalk-Following-Ackermann-Robot

./: README.md  README_9_9_25.md  README_Communication_flow_chart.md  README_Dynamic_Velocity_Control.md  README_Launch_order_option.md  README_Merge_v1.md  README_Merge_v2.md  README_OrinNano.md  README_QuikTune.md  README_Start_up_Sheet.md  README_TUNING.md  README_comm_flow_9_15_25.md  README_communication_plan.md  README_file_structure.md  README_master.md  README_robot_control_gui.md  README_wiring_jetson_pixhawk.md  guided_mission.py  ldlidar.launch  lidar_to_mavlink_bridge.py  mavlink_commands_for_prx.txt  mission.txt  radiolink_gps_telem_setup.md  readme_9_15_25.md  readme_mission.md  readme_quickstart.md  readme_semantic_seg_install_full.md  reset_robot_services.sh  robot_control_gui.py  robot_control_gui_v3.py  robot_stack_reset_and_start.sh  rover-quicktune.lua  scan_to_obstacle_distance.py  segmav_bridge.launch  serial_protocal_mavlink.txt  sidewalk_gps_car.txt  start_robot_manual.sh
custom/: README_segnet.md  auto_nudge_segnet_preview.py  backend_segnet.py  common_overlay.py  guided_wp_segnet_preview.py  steer_sweep.py
orange_cube_version_try2/: cube_orange_readme.md  readme_segmav_cube_orange_.md
segmav-main/: guided_turn_manager.py  (+4 more)
segmav_pkg/: CMakeLists.txt  README.md  package.xml
segmav_pkg/config/mavlink-router/: main.conf.sample
segmav_pkg/launch/: prx.launch
segmav_pkg/src/: mavsegmav_merged.py  scan_to_obstacle_distance.py
segmav_pkg/systemd/: segmav-prx.service
segmav_pkg/udev/: 99-segmav-serial.rules.sample  99-segmav.rules
(+22 files in other folders)
