<?xml version="1.0"?>
<package format="2">
  <name>segmav</name>
  <version>0.0.1</version>
  <description>SEGMAV helpers: velocity-nudge node and PRX publisher</description>

  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>python3</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
</package>
